/*
 * $Id:$
 */

/* Use this format for the entry headers:
 * YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Name or Username and/or <your_email@address>
 * For example:
 * 2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */

2018-05-24 19:09 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.
    * include\source\i_window.prg
      + Added window status constants.
    * core\source\h_form.prg
      * Use new window status constants.

2018-05-21 10:57 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.
    * core\source\h_textarray.prg
      * Some format.
      * Some comments.
      + Some defines to improve readability.

2018-05-21 10:49 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.
   * core\*.*
     * Copyright updated.

2018-05-19 22:55 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.
   * core\source\h_label.prg
     ! LABEL with TRANSPARENT clause is not painted correctly
       after font change.
   * core\source\c_font.c
     * Some format.

2018-05-17 17:48 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\ChangeLog.txt
     * Updated.
   * core\source\h_tab.prg
     ! Container is not set when a TAB is added to a page
       using method AddControl.

2018-05-16 17:13 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * core\include\i_checkbox.ch
   * core\include\i_comm.ch
   * core\include\i_controlmisc.ch
   * core\include\i_checkbox.ch
   * core\include\i_datepicker.ch
   * core\include\i_editbox.ch
   * core\include\i_encrypt.ch
   * core\include\i_hmg_compat.ch
   * core\include\i_ini.ch
   * core\include\i_listbox.ch
   * core\include\i_media.ch
   * core\include\i_menu.ch
   * core\include\i_report.ch
   * core\include\i_richeditbox.ch
   * core\include\i_status.ch
   * core\include\i_textbox.ch
   * core\include\i_checkbox.ch
     * Format.
   * core\include\miniprint.ch