@@ -32,7 +32,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this software; see the file LICENSE.txt. If not, write to
  * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
- * Boston, MA 02110-1335,USA (or download from http://www.gnu.org/licenses/).
+ * Boston, MA 02110-1335, USA (or download from http://www.gnu.org/licenses/).
  *
  * As a special exception, the ooHG Project gives permission for
  * additional uses of the text contained in its release of ooHG.
@@ -65,190 +65,320 @@
 #include "hbclass.ch"
 #include "i_windefs.ch"
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 CLASS TProgressBar FROM TControl
 
-   DATA Type        INIT "PROGRESSBAR" READONLY
-   DATA nRangeMin   INIT 0
-   DATA nRangeMax   INIT 100
-   DATA nVelocity   INIT 30
-   DATA lRunning    INIT .F.
+   DATA Type                      INIT "PROGRESSBAR" READONLY
+   DATA lRunning                  INIT .F.
+   DATA nRangeMax                 INIT 100
+   DATA nRangeMin                 INIT 0
+   DATA nVelocity                 INIT 30
 
+   METHOD BackColor               SETGET
    METHOD Define
-   METHOD Value               SETGET
-
-   METHOD RangeMin            SETGET
-   METHOD RangeMax            SETGET
-   METHOD FontColor           SETGET
-   METHOD BackColor           SETGET
-   METHOD SetStyleMarquee
-   METHOD SetStyleNormal
+   METHOD FontColor               SETGET
+   METHOD IsMarqueeRunning
    METHOD IsStyleMarquee
    METHOD IsStyleNormal
+   METHOD RangeMax                SETGET
+   METHOD RangeMin                SETGET
+   METHOD SetStyleMarquee
+   METHOD SetStyleNormal
    METHOD StartMarquee
    METHOD StopMarquee
-   METHOD IsMarqueeRunning
+   METHOD Value                   SETGET
 
    ENDCLASS
 
-METHOD Define( ControlName, ParentForm, x, y, w, h, lo, hi, tooltip, ;
-               vertical, smooth, HelpId, invisible, nValue, BackColor, ;
-               BarColor, lRtl, nVelocity ) CLASS TProgressBar
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+METHOD Define( cControlName, cParentForm, nCol, nRow, nWidth, nHeight, nMin, nMax, cToolTip, ;
+      lVertical, lSmooth, nHelpId, lInvisible, nValue, uBackColor, uBarColor, lRtl, nVelocity ) CLASS TProgressBar
 
-   Local ControlHandle
+   LOCAL nControlHandle
 
-   ASSIGN vertical  VALUE vertical  TYPE "L" DEFAULT .F.
-   ASSIGN smooth    VALUE smooth    TYPE "L" DEFAULT .F.
-   ASSIGN h         VALUE h         TYPE "N" DEFAULT if( vertical, 120, 25 )
-   ASSIGN w         VALUE w         TYPE "N" DEFAULT if( vertical, 25, 120 )
-   ASSIGN lo        VALUE lo        TYPE "N" DEFAULT 0
-   ASSIGN hi        VALUE hi        TYPE "N" DEFAULT 100
-   ASSIGN nValue    VALUE nValue    TYPE "N" DEFAULT 0
-   ASSIGN invisible VALUE invisible TYPE "L" DEFAULT .F.
+   ASSIGN lVertical  VALUE lVertical  TYPE "L" DEFAULT .F.
+   ASSIGN lSmooth    VALUE lSmooth    TYPE "L" DEFAULT .F.
+   ASSIGN nHeight    VALUE nHeight    TYPE "N" DEFAULT iif( lVertical, 120, 25 )
+   ASSIGN nWidth     VALUE nWidth     TYPE "N" DEFAULT iif( lVertical, 25, 120 )
+   ASSIGN nMin       VALUE nMin       TYPE "N" DEFAULT 0
+   ASSIGN nMax       VALUE nMax       TYPE "N" DEFAULT 100
+   ASSIGN nValue     VALUE nValue     TYPE "N" DEFAULT 0
+   ASSIGN lInvisible VALUE lInvisible TYPE "L" DEFAULT .F.
 
-   ::SetForm( ControlName, ParentForm,,, BarColor, BackColor,, lRtl  )
+   ::SetForm( cControlName, cParentForm, , , uBarColor, uBackColor, , lRtl  )
 
-   ControlHandle := InitProgressBar ( ::ContainerhWnd, 0, x, y, w, h ,lo ,hi, vertical, smooth, invisible, nValue, ::lRtl )
+   nControlHandle := InitProgressBar( ::ContainerhWnd, 0, nCol, nRow, nWidth, nHeight, nMin, nMax, lVertical, lSmooth, lInvisible, nValue, ::lRtl )
 
-   ::Register( ControlHandle, ControlName, HelpId, ! Invisible, ToolTip )
-   ::SizePos( y, x, w, h )
+   ::Register( nControlHandle, cControlName, nHelpId, ! lInvisible, cToolTip )
+   ::SizePos( nRow, nCol, nWidth, nHeight )
 
-   ::nRangeMin := Lo
-   ::nRangeMax := Hi
+   ::nRangeMin := nMin
+   ::nRangeMax := nMax
 
-   if ::BackColor <> Nil
-      SetProgressBarBkColor( ControlHandle, ::BackColor[1], ::BackColor[2], ::BackColor[3] )
-   endif
+   IF ::BackColor <> NIL
+      /* BackColor is ignored when visual styles are enabled. Use ::DisableVisualStyle() to disable them. */
+      SetProgressBarBkColor( nControlHandle, ::BackColor[1], ::BackColor[2], ::BackColor[3] )
+   ENDIF
 
-   if ::FontColor <> Nil
-      SetProgressBarBarColor( ControlHandle, ::FontColor[1], ::FontColor[2], ::FontColor[3] )
-   endif
+   IF ::FontColor <> NIL
+      /* FontColor is ignored when visual styles are enabled. Use ::DisableVisualStyle() to disable them. */
+      SetProgressBarBkColor( nControlHandle, ::FontColor[1], ::FontColor[2], ::FontColor[3] )
+   ENDIF
 
-   if HB_IsNumeric( nVelocity )
+   IF HB_ISNUMERIC( nVelocity )
       ::nVelocity := nVelocity
 
       ::SetStyleMarquee( nVelocity )
-   endif
+   ENDIF
 
-   Return Self
+   RETURN Self
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD SetStyleMarquee( nVelocity ) CLASS TProgressBar
 
-   if ! IsWindowStyle( ::hWnd, PBS_MARQUEE )
+   IF ! IsWindowStyle( ::hWnd, PBS_MARQUEE )
      ::Style( ::Style() + PBS_MARQUEE )
-   endif
+   ENDIF
 
-   if HB_IsNumeric( nVelocity ) .and. nVelocity > 0
+   IF HB_ISNUMERIC( nVelocity ) .AND. nVelocity > 0
       ::nVelocity := nVelocity
 
       ::StartMarquee()
-   else
+   ELSE
       ::StopMarquee()
-   endif
+   ENDIF
 
-   Return Nil
+   RETURN NIL
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD SetStyleNormal( uValue ) CLASS TProgressBar
 
-   if IsWindowStyle( ::hWnd, PBS_MARQUEE )
+   IF IsWindowStyle( ::hWnd, PBS_MARQUEE )
       ::StopMarquee()
 
       ::Style( ::Style() - PBS_MARQUEE )
 
-      if ! HB_IsNumeric( uValue ) .or. uValue < 0
+      IF ! HB_ISNUMERIC( uValue ) .OR. uValue < 0
         uValue := 0
-      endif
+      ENDIF
 
       ::value := uValue
-   endif
+   ENDIF
 
-   Return Nil
+   RETURN NIL
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD IsStyleMarquee() CLASS TProgressBar
 
-   Return IsWindowStyle( ::hWnd, PBS_MARQUEE )
+   RETURN IsWindowStyle( ::hWnd, PBS_MARQUEE )
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD IsStyleNormal() CLASS TProgressBar
 
-   Return ! IsWindowStyle( ::hWnd, PBS_MARQUEE )
+   RETURN ! IsWindowStyle( ::hWnd, PBS_MARQUEE )
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD StartMarquee() CLASS TProgressBar
 
-   if IsWindowStyle( ::hWnd, PBS_MARQUEE )
-      if ! ::lRunning
+   IF IsWindowStyle( ::hWnd, PBS_MARQUEE )
+      IF ! ::lRunning
          ::lRunning := .T.
 
-         if ::nVelocity <= 0
+         IF ::nVelocity <= 0
             ::nVelocity := 30
-         endif
+         ENDIF
 
          // 1 => start
          SendMessage( ::hWnd, PBM_SETMARQUEE, 1, ::nVelocity )
-      endif
-   endif
+      ENDIF
+   ENDIF
 
-   Return Nil
+   RETURN NIL
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD StopMarquee() CLASS TProgressBar
 
-   if IsWindowStyle( ::hWnd, PBS_MARQUEE )
-      if ::lRunning
+   IF IsWindowStyle( ::hWnd, PBS_MARQUEE )
+      IF ::lRunning
         ::lRunning := .F.
 
-         if ::nVelocity <= 0
+         IF ::nVelocity <= 0
             ::nVelocity := 30
-         endif
+         ENDIF
 
-         // 0 => stop
+         /* 0 => stop */
          SendMessage( ::hWnd, PBM_SETMARQUEE, 0, ::nVelocity )
-      endif
-   endif
+      ENDIF
+   ENDIF
 
-   Return Nil
+   RETURN NIL
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD IsMarqueeRunning() CLASS TProgressBar
 
-   Return ::lRunning
+   RETURN ::lRunning
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD Value( uValue ) CLASS TProgressBar
 
-   IF HB_IsNumeric( uValue )
+   IF HB_ISNUMERIC( uValue )
       SendMessage( ::hWnd, PBM_SETPOS, uValue, 0 )
    ENDIF
 
    RETURN SendMessage( ::hWnd, PBM_GETPOS, 0, 0)
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD RangeMin( uValue ) CLASS TProgressBar
 
-   IF HB_IsNumeric( uValue )
+   IF HB_ISNUMERIC( uValue )
       ::nRangeMin := uValue
       SetProgressBarRange( ::hWnd, uValue, ::nRangeMax )
    ENDIF
 
    RETURN ::nRangeMin
 
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD RangeMax( uValue ) CLASS TProgressBar
 
-   IF HB_IsNumeric( uValue )
+   IF HB_ISNUMERIC( uValue )
       ::nRangeMax := uValue
       SetProgressBarRange( ::hWnd, ::nRangeMin, uValue )
    ENDIF
 
    RETURN ::nRangeMax
 
-*------------------------------------------------------------------------------*
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD FontColor( uValue ) CLASS TProgressBar
-*------------------------------------------------------------------------------*
-   IF HB_IsNumeric( uValue )
+
+   IF HB_ISNUMERIC( uValue )
       ::Super:FontColor := uValue
       SetProgressBarBarColor( ::hWnd, ::FontColor[1], ::FontColor[2], ::FontColor[3] )
    ENDIF
-RETURN ::Super:FontColor
 
-*------------------------------------------------------------------------------*
+   RETURN ::Super:FontColor
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
 METHOD BackColor( uValue ) CLASS TProgressBar
-*------------------------------------------------------------------------------*
+
    IF HB_IsArray( uValue )
       ::Super:BackColor := uValue
       SetProgressBarBkColor( ::hWnd, ::BackColor[1], ::BackColor[2], ::BackColor[3] )
    ENDIF
-RETURN ::Super:BackColor
+
+   RETURN ::Super:BackColor
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+#pragma BEGINDUMP
+
+#ifndef HB_OS_WIN_32_USED
+   #define HB_OS_WIN_32_USED
+#endif
+
+#ifndef _WIN32_IE
+   #define _WIN32_IE 0x0500
+#endif
+#if ( _WIN32_IE < 0x0500 )
+   #undef _WIN32_IE
+   #define _WIN32_IE 0x0500
+#endif
+
+#ifndef _WIN32_WINNT
+   #define _WIN32_WINNT 0x0400
+#endif
+#if ( _WIN32_WINNT < 0x0400 )
+   #undef _WIN32_WINNT
+   #define _WIN32_WINNT 0x0400
+#endif
+
+#include <shlobj.h>
+#include <windows.h>
+#include <commctrl.h>
+#include "hbapi.h"
+#include "hbvm.h"
+#include "hbstack.h"
+#include "hbapiitm.h"
+#include "winreg.h"
+#include "tchar.h"
+#include "oohg.h"
+
+static WNDPROC lpfnOldWndProc = 0;
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+static LRESULT APIENTRY SubClassFunc( HWND hWnd, UINT msg, WPARAM wParam, LPARAM lParam )
+{
+   return _OOHG_WndProcCtrl( hWnd, msg, wParam, lParam, lpfnOldWndProc );
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+HB_FUNC( INITPROGRESSBAR )          /* FUNCTION InitProgressBar( ContainerhWnd, nStyle, nCol, nRow, nWidth, nHeight, nMin, nMax, lVertical, lSmooth, lInvisible, nValue, lRtl ) -> hWnd */
+{
+   HWND hwnd;
+   HWND hbutton;
+   int StyleEx;
+   int Style = WS_CHILD | hb_parni( 2 );
+
+   INITCOMMONCONTROLSEX i;
+   i.dwSize = sizeof( INITCOMMONCONTROLSEX );
+   i.dwICC = ICC_DATE_CLASSES;
+   InitCommonControlsEx( &i );
+
+   hwnd = HWNDparam( 1 );
+
+   StyleEx = WS_EX_CLIENTEDGE | _OOHG_RTL_Status( hb_parl( 13 ) );
+
+   if ( hb_parl( 9 ) )
+   {
+      Style = Style | PBS_VERTICAL;
+   }
+
+   if ( hb_parl( 10 ) )
+   {
+      Style = Style | PBS_SMOOTH;
+   }
+
+   if ( ! hb_parl( 11 ) )
+   {
+      Style = Style | WS_VISIBLE;
+   }
+
+   hbutton = CreateWindowEx( StyleEx,
+                             "msctls_progress32",
+                             0,
+                             Style,
+                             hb_parni( 3 ),
+                             hb_parni( 4 ),
+                             hb_parni( 5 ),
+                             hb_parni( 6 ),
+                             hwnd, (HMENU) hb_parni( 2 ),
+                             GetModuleHandle( NULL ),
+                             NULL );
+
+   SendMessage( hbutton, PBM_SETRANGE, 0, MAKELONG( hb_parni( 7 ), hb_parni( 8 ) ) );
+   SendMessage( hbutton, PBM_SETPOS, (WPARAM) hb_parni( 12 ), 0 );
+
+   lpfnOldWndProc = (WNDPROC) SetWindowLong( (HWND) hbutton, GWL_WNDPROC, (LONG) SubClassFunc );
+
+   HWNDret( hbutton );
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+HB_FUNC( SETPROGRESSBARRANGE )          /* FUNCTION SetProgressbarRange( hWnd, nMin, nMax ) -> NIL */
+{
+   SendMessage( HWNDparam( 1 ), PBM_SETRANGE, 0, MAKELONG( hb_parni( 2 ), hb_parni( 3 ) ) );
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+HB_FUNC( SETPROGRESSBARBKCOLOR )          /* FUNCTION SetProgressbarBkColor( hWnd, nRed, nGreen, nBlue ) -> NIL */
+{
+   /* When visual styles are enabled this message has no effect */
+   SendMessage( HWNDparam( 1 ), PBM_SETBKCOLOR, 0, RGB( hb_parni( 2 ), hb_parni( 3 ), hb_parni( 4 ) ) );
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------*/
+HB_FUNC( SETPROGRESSBARBARCOLOR )          /* FUNCTION SetProgressbarBarColor( hWnd, nRed, nGreen, nBlue ) -> NIL */
+{
+   /* When visual styles are enabled this message has no effect */
+   SendMessage( HWNDparam( 1 ), PBM_SETBARCOLOR, 0, RGB( hb_parni( 2 ), hb_parni( 3 ), hb_parni( 4 ) ) );
+}
+
+#pragma ENDDUMP
